objects/Zumba__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <label>ApprovalDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenseAmount__c</fullName>
        <label>ExpenseAmount</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OverrideAllowed</label>
        <type>Checkbox</type>
    </fields>
    <label>Zumba</label>
    <nameField>
        <label>Zumba Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zumba</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>